compiler/testData/diagnostics/tests/enum/enumSemicolonBetween.kt
<!ENUM_USES_DEPRECATED_DELIMITERS!>enum class MyEnum<!> {
    A<!SYNTAX!><!>;
    B<!SYNTAX!><!>;
    C<!SYNTAX!><!>;
    D

    fun foo() = 0
}